--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,31 +11,31 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-slot": "^1.2.3",
     "axios": "^1.12.2",
-    "react-hook-form": "^7.65.0",
-    "react-hot-toast": "^2.6.0",
-    "zustand": "^5.0.8",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.0.0",
     "framer-motion": "^11.0.0",
     "lucide-react": "^0.400.0",
-    "clsx": "^2.0.0",
+    "next": "^14.0.0",
+    "next-themes": "^0.2.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "react-hook-form": "^7.65.0",
+    "react-hot-toast": "^2.6.0",
     "tailwind-merge": "^2.0.0",
-    "@radix-ui/react-avatar": "^1.0.4",
-    "@radix-ui/react-slot": "^1.0.2",
-    "class-variance-authority": "^0.7.0",
-    "next-themes": "^0.2.1"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
-    "typescript": "^5.0.0",
+    "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "typescript": "^5.0.0"
   }
 }
