--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@supabase/supabase-js": "^2.39.0",
     "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
@@ -7,7 +8,9 @@
     "express-validator": "^7.2.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
-    "@supabase/supabase-js": "^2.39.0"
+    "passport": "^0.7.0",
+    "passport-github": "^1.1.0",
+    "passport-github2": "^0.1.12"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
@@ -15,9 +18,9 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.7.1",
+    "nodemon": "^3.0.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.9.3",
-    "nodemon": "^3.0.0"
+    "typescript": "^5.9.3"
   },
   "name": "backend",
   "version": "1.0.0",
