--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^2.0.0",
     "zustand": "^5.0.8"
   },
