--- a/backend/package.json
+++ b/backend/package.json
@@ -9,9 +9,12 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.19.1",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.9",
     "passport": "^0.7.0",
     "passport-github": "^1.1.0",
-    "passport-github2": "^0.1.12"
+    "passport-github2": "^0.1.12",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
