--- a/package.json
+++ b/package.json
@@ -11,23 +11,25 @@
     "test:watch": "jest --watch"
   },
   "dependencies": {
+    "axios": "^1.12.2",
     "next": "^14.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "axios": "^1.12.2",
     "react-hook-form": "^7.65.0",
     "react-hot-toast": "^2.6.0",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
+    "autoprefixer": "^10.4.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^14.0.0",
-    "typescript": "^5.0.0",
+    "jest": "^30.2.0",
+    "postcss": "^8.4.0",
     "tailwindcss": "^3.3.0",
-    "autoprefixer": "^10.4.0",
-    "postcss": "^8.4.0"
+    "typescript": "^5.0.0"
   }
 }
